--- a/locales/de/t.json
+++ b/locales/de/t.json
@@ -1,3 +1,7 @@
 {
-    "demo": "Deutsch"
+    "airtable": "https://airtable.com/embed/shrt2zDi31Ra8jkT2?backgroundColor=pink",
+    "aboutUs": "Über Uns",
+    "event": "Ablauf",
+    "photos": "Fotos",
+    "locations": "Event Locations"
 }
