--- a/locales/en/t.json
+++ b/locales/en/t.json
@@ -1,3 +1,7 @@
 {
-    "demo": "Englisch"
+    "airtable": "https://airtable.com/embed/shrbbohlup09PN7Rg?backgroundColor=pink",
+    "aboutUs": "About Us",
+    "event": "Event",
+    "photos": "Pics",
+    "locations": "Glimpse of the locations"
 }
