--- a/locales/de/t.json
+++ b/locales/de/t.json
@@ -3,5 +3,8 @@
     "aboutUs": "Über Uns",
     "event": "Ablauf",
     "photos": "Fotos",
-    "locations": "Event Locations"
+    "locations": "Event Locations",
+    "wemarry": "Wir heiraten",
+    "date": "Samstag, den 31. Oktober 2020",
+    "happy": "Wir wünschen uns, dass Ihr Teil davon seid"
 }
