--- a/locales/hu/t.json
+++ b/locales/hu/t.json
@@ -3,5 +3,8 @@
     "aboutUs": "About Us",
     "event": "Event",
     "photos": "Pics",
-    "locations": "Glimpse of the locations"
+    "locations": "Glimpse of the locations",
+    "wemarry": "We are getting married.",
+    "date": "Saturday, 31st October 2020",
+    "happy": "We would be happy if you attend."
 }
