--- a/locales/de/t.json
+++ b/locales/de/t.json
@@ -6,5 +6,6 @@
     "locations": "Event Locations",
     "wemarry": "Wir heiraten",
     "date": "Samstag, den 31. Oktober 2020",
-    "happy": "Wir wünschen uns, dass Ihr Teil davon seid"
+    "happy": "Wir wünschen uns, dass Ihr Teil davon seid",
+    "choice": "hier übernachten wir"
 }
