--- a/locales/hu/t.json
+++ b/locales/hu/t.json
@@ -4,7 +4,8 @@
     "event": "Event",
     "photos": "Pics",
     "locations": "Glimpse of the locations",
-    "wemarry": "We are getting married.",
+    "wemarry": "We are getting married",
     "date": "Saturday, 31st October 2020",
-    "happy": "We would be happy if you attend."
+    "happy": "We would be happy if you attend",
+    "choice": "our choice"
 }
